[metadata]
name = sphinx_sizzle_theme
version = attr: sphinx_sizzle_theme.__version__
description =     The Sizzle theme for Sphinx.
long_description = file: README.rst
url = https://docs.red-dove.com/sphinx_sizzle_theme/
author = Vinay Sajip
author_email = vinay_sajip@yahoo.co.uk
maintainer = Vinay Sajip
maintainer_email = vinay_sajip@yahoo.co.uk
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Sphinx
    Framework :: Sphinx :: Theme
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Documentation
project_urls =
    Documentation = https://docs.red-dove.com/sphinx_sizzle_theme/
    Source = https://github.com/vsajip/sphinx_sizzle_theme
    Tracker = https://github.com/vsajip/sphinx_sizzle_theme/issues
keywords = documentation,sphinx,theme
platforms = any

[options]
packages = sphinx_sizzle_theme
zip_safe = False
install_requires =
    sphinx

[options.entry_points]
sphinx.html_themes =
    sizzle = sphinx_sizzle_theme

[options.package_data]
sphinx_sizzle_theme =
    theme.conf
    *.html
    version.txt
    static/css/*.css
    static/js/*.js
    static/fonts/*.*

[bdist_wheel]
universal = 1
